# Cuttlefish

./: .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
cmake/: FetchSFML.cmake
include/: action_binding.h  display_manager.h  event_handler.h  session.h  tile.h
runner/: main.cpp
src/: CMakeLists.txt
src/action/: CMakeLists.txt  event_handler.cpp
src/display/: CMakeLists.txt  display.cppm  display_manager.cpp  display_manager.cppm  session.cpp  tile.cpp
